<resources>
    <string name="app_name">s164539 Lykkehjulet</string>
    <string name="app_name2">Lykkehjulet</string>
    <string name="welcome_to_game_text">Velkommen til Lykkehjulet</string>
    <string name="start_game_button">Start spillet!</string>
    <string name="life_count">Liv : %s</string>
    <string name="score_counter">Score : %s</string>
    <string name="category">Kategorien er : %s</string>
    <string name="guess_word">Gæt et bogstav</string>
    <string name="replay_game">Start spillet igen</string>

    <string name="win_game">Du har vundet spillet !</string>
    <string name="lose_game">Du har desværre tabt spillet !</string>

    <string name="guess">Indtast din bogstav</string>
    <string name="wrong_gues">Det er desværre forkert. Prøv igen</string>

    <string name="highcores1">s164539 600 points</string>
    <string name="highcores2">s164539 400 points</string>
    <string name="highcores3">s164539 100 points</string>
    <string name="highcores4">s164539 900 points</string>
    <string name="highcores5">s164539 100 points</string>
    <string name="highcores6">s164539 50 points</string>
    <string name="highcores7">s164539 10 points</string>
    <string name="highcores8">s164539 20 points</string>
    <string name="highcores9">s164539 700 points</string>
    <string name="highcores10">s164539 1000 points</string>
</resources>